[package]
name = "dcc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = true
codegen-units = 1
