[package]
name = "dcc"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-only"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = true
codegen-units = 1
